Fix bug with scrolling on mobile

--- a/app/assets/stylesheets/simple_sidebar.scss
+++ b/app/assets/stylesheets/simple_sidebar.scss
@@ -23,7 +23,6 @@
   padding-top: 30px;
   padding-bottom: 100px;
   overflow-y: scroll;
-  overflow-x: hidden;
   z-index: 9998;
   nav {
     left: -100%;
@@ -34,6 +33,7 @@
 
 
 #content-container.nav-shown {
+  overflow: hidden;
   nav {
     width: 100vw;
     left: 0px;
@@ -55,6 +55,7 @@ nav {
   #content-container {
     left: 180px !important;
     right: 0 !important;
+    overflow-y: scroll !important;
 
     nav {
       left: 0;
